# askie

./: .gitignore  README.md  run.py
app/: __init__.py
app/db/: __init__.py  db_setup.py  db_utils.py  setup_db.py
app/helpers/: __init__.py  db_utils.py  transcript_utils.py
app/routes/: main.py
backend/: pyproject.toml  run.py
backend/app/: config.py
backend/app/db/: __init__.py  db_setup.py  db_utils.py
backend/app/helpers/: __init__.py  transcript_utils.py
backend/app/routes/: main.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: chat-area.tsx  chat-layout.tsx  video-list.tsx
frontend/src/services/: videosService.tsx
frontend/src/types/: types.tsx
