[tool.poetry]
name = "ragapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
flask = ">=3.1.1,<4.0.0"
psycopg2 = ">=2.9.10,<3.0.0"
dotenv = ">=0.9.9,<0.10.0"
openai = ">=1.97.1,<2.0.0"
pgvector = "^0.4.1"
youtube-transcript-api = "^1.2.1"
langchain-experimental = "^0.3.4"
langchain-openai = "^0.3.28"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
